Change mapType in mapSettings View controller when you select segmented control option

--- a/TravelApp/Map.storyboard
+++ b/TravelApp/Map.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="45h-zq-vlf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="45h-zq-vlf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -65,10 +65,10 @@
             </objects>
             <point key="canvasLocation" x="1896.8" y="-147.07646176911544"/>
         </scene>
-        <!--View Controller-->
+        <!--Map Settings Controller-->
         <scene sceneID="pnW-Ll-ert">
             <objects>
-                <viewController id="iwd-1s-QyO" sceneMemberID="viewController">
+                <viewController id="iwd-1s-QyO" customClass="MapSettingsController" customModule="TravelApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Auf-hB-Fpc"/>
                         <viewControllerLayoutGuide type="bottom" id="Y9n-JB-7ru"/>
@@ -92,6 +92,9 @@
                                     <segment title="Satellite"/>
                                     <segment title="Hybrid"/>
                                 </segments>
+                                <connections>
+                                    <action selector="changeMapType:" destination="iwd-1s-QyO" eventType="valueChanged" id="A6V-gB-Hay"/>
+                                </connections>
                             </segmentedControl>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
