--- a/TravelApp/Base.lproj/Tag.storyboard
+++ b/TravelApp/Base.lproj/Tag.storyboard
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="evE-xR-Gnm">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="evE-xR-Gnm">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -21,15 +22,20 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tag View Controller" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c56-IG-fGg">
-                                <rect key="frame" x="110" y="100" width="155" height="59"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select up to four bubbles" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c56-IG-fGg" userLabel="Desc">
+                                <rect key="frame" x="91" y="610" width="193" height="37"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="c56-IG-fGg" firstAttribute="leading" secondItem="LLa-45-lDC" secondAttribute="leadingMargin" constant="75" id="JWh-KZ-xli"/>
+                            <constraint firstItem="c56-IG-fGg" firstAttribute="top" secondItem="Dlr-E6-1p5" secondAttribute="bottom" constant="546" id="Y4b-dz-qai"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="c56-IG-fGg" secondAttribute="trailing" constant="75" id="hW9-JZ-2Uo"/>
+                            <constraint firstItem="gkz-5i-XFR" firstAttribute="top" secondItem="c56-IG-fGg" secondAttribute="bottom" constant="20" id="yvw-yh-HhI"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="4wq-Bv-7vj"/>
                     <connections>
@@ -44,7 +50,7 @@
         <scene sceneID="aKr-67-VgT">
             <objects>
                 <navigationController id="evE-xR-Gnm" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="Wev-rG-40a">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Wev-rG-40a">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
